--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -38,22 +38,23 @@
 }
 
 .read-the-docs {
-  color: #888;
+  color: white;
 }
 
 
 
 .form {
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr; /* no commas */
-  gap: 5px;
+  gap: 5px 15px ;
   background-color: transparent !important ;
 }
 
 
 .form input {
   margin: 5px 0;
-  border-radius: 5px;
-  padding:8px 5px;
+  border-radius: 10px;
+  padding:12px 5px;
   background-color: gray;
 }
