--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
+@import "tailwindcss";
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* color: rgba(255, 255, 255, 0.87); */
+  /* background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -52,6 +54,17 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+input,
+select, textarea {
+  color: black !important;
+  border: 1px solid gray !important;
+  padding: 10px !important;
+}
+
+input::placeholder {
+  color: black !important;
 }
 
 @media (prefers-color-scheme: light) {
